Added Swagger for API Documentation